import React from 'react';
import { fireEvent, waitFor } from '@testing-library/react';
import configureStore from '../../../store/store';
import { renderWithProvider } from '../../../../test/lib/render-helpers-navigate';
import mockState from '../../../../test/data/mock-state.json';
import { openWindow } from '../../../helpers/utils/window';
import { SUPPORT_LINK } from '../../../../shared/lib/ui-utils';
import { AppHeader } from '.';

jest.mock('react-router-dom', () => ({
  ...jest.requireActual('react-router-dom'),
  // eslint-disable-next-line react/prop-types
  Link: ({ children, ...props }) => <a {...props}>{children}</a>,
  // eslint-disable-next-line react/prop-types
  CompatRouter: ({ children }) => <div>{children}</div>,
  matchPath: jest.fn(),
  useNavigate: () => jest.fn(),
}));

jest.mock('../../../helpers/utils/window', () => ({
  openWindow: jest.fn(),
}));

const render = ({
  stateChanges = {},
  location = {},
  isUnlocked = true,
} = {}) => {
  const store = configureStore({
    ...mockState,
    metamask: {
      ...mockState.metamask,
      isUnlocked: isUnlocked ?? true,
    },
    activeTab: {
      origin: 'https://remix.ethereum.org',
    },
    ...stateChanges,
  });
  return renderWithProvider(<AppHeader location={location} />, store);
};

describe('App Header', () => {
  afterEach(() => {
    jest.clearAllMocks();
  });
  it('unlocked state matches snapshot', () => {
    const { container } = render();
    expect(container).toMatchSnapshot('unlocked');
  });

  it('locked state matches snapshot', () => {
    const { container } = render({ isUnlocked: false });
    expect(container).toMatchSnapshot('locked');
  });

  describe('unlocked state', () => {
    afterEach(() => {
      jest.clearAllMocks();
    });

    it('can open the account list', () => {
      const { container } = render();
      const accountPickerButton = container.querySelector(
        '.multichain-account-picker',
      );
      expect(accountPickerButton).toBeInTheDocument();
    });

    it('displays the selected network logo', () => {
      const { getByTestId } = render();
      const networkPicker = getByTestId('network-display');
      const networkLogo = networkPicker.querySelector(
        '.mm-picker-network__avatar-network img',
      );

      expect(networkLogo).toHaveAttribute('src', './images/eth_logo.svg');
    });

    it('displays a network group when all networks are selected', () => {
      const { getByTestId } = render({
        stateChanges: {
          metamask: {
            ...mockState.metamask,
            isUnlocked: true,
            enabledNetworkMap: {
              eip155: {
                '0x1': true,
                '0xe708': true,
              },
            },
          },
        },
      });

      const networkPicker = getByTestId('network-display');
      expect(networkPicker).toHaveAttribute(
        'aria-label',
        expect.stringContaining('All networks'),
      );
      expect(
        networkPicker.querySelector('[data-testid="avatar-group"]'),
      ).toBeInTheDocument();
    });

    it('can open the settings', async () => {
      const { container } = render();
      const settingsButton = container.querySelector(
        '[data-testid="account-options-menu-button"]',
      );
      expect(settingsButton).toBeInTheDocument();
      fireEvent.click(settingsButton);

      await waitFor(() => {
        const settingsMenu = document.querySelector(
          '[data-testid="global-menu-settings"]',
        );
        expect(settingsMenu).toBeInTheDocument();
      });
    });

    describe('Drawer support button', () => {
      beforeEach(async () => {
        const { container } = render();

        const settingsButton = container.querySelector(
          '[data-testid="account-options-menu-button"]',
        );
        fireEvent.click(settingsButton);

        // Menu is in portaled drawer; wait for Support button to be in document
        let globalMenuSupportButton;
        await waitFor(() => {
          globalMenuSupportButton = document.querySelector(
            '[data-testid="global-menu-support"]',
          );
          if (!globalMenuSupportButton) {
            throw new Error('Support button not found');
          }
        });
        fireEvent.click(globalMenuSupportButton);
        // Wait for consent modal to be open so drawer-close and modal-open updates are flushed (avoids Act warnings)
        await waitFor(() => {
          if (
            !document.querySelector(
              '[data-testid="visit-support-data-consent-modal"]',
            )
          ) {
            throw new Error('Consent modal not open');
          }
        });
      });

      it('can open the visit support data consent modal', async () => {
        await waitFor(() => {
          const supportDataConsentModal = document.querySelector(
            '[data-testid="visit-support-data-consent-modal"]',
          );
          expect(supportDataConsentModal).toBeInTheDocument();
        });
      });

      it('opens the support site when "Confirm" button is clicked', async () => {
        let acceptButton;
        await waitFor(() => {
          acceptButton = document.querySelector(
            '[data-testid="visit-support-data-consent-modal-accept-button"]',
          );
          expect(acceptButton).toBeInTheDocument();
        });
        fireEvent.click(acceptButton);

        await waitFor(() => {
          expect(openWindow).toHaveBeenCalled();
        });
      });

      it(`opens the support site when "Don't share" button is clicked`, async () => {
        let rejectButton;
        await waitFor(() => {
          rejectButton = document.querySelector(
            '[data-testid="visit-support-data-consent-modal-reject-button"]',
          );
          expect(rejectButton).toBeInTheDocument();
        });
        fireEvent.click(rejectButton);

        await waitFor(() => {
          // When user doesn't consent, non-personal params (utm_source) are preserved
          const expectedUrl = SUPPORT_LINK;
          expect(openWindow).toHaveBeenCalledWith(expectedUrl);
        });
      });
    });
  });

  describe('locked state', () => {
    it('does not show the account picker', () => {
      const { container } = render({
        isUnlocked: false,
      });
      const accountPickerButton = container.querySelector(
        '.multichain-account-picker',
      );
      expect(accountPickerButton).not.toBeInTheDocument();
    });

    it('does not show the settings', async () => {
      const { container } = render({
        isUnlocked: false,
      });
      const settingsButton = container.querySelector(
        '[data-testid="account-options-menu-button"]',
      );
      expect(settingsButton).not.toBeInTheDocument();
    });
  });
});
