// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Header locked state matches snapshot: locked 1`] = `
<div>
  <div
    class="mm-box multichain-app-header mm-box--display-flex mm-box--align-items-center mm-box--width-full mm-box--background-color-background-default"
  >
    <div
      class="mm-box multichain-app-header__lock-contents mm-box--padding-2 mm-box--display-flex mm-box--gap-2 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-background-default"
    >
      <div>
        <button
          aria-label="Network menu Goerli"
          class="mm-box mm-picker-network multichain-app-header__contents__network-picker mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--background-color-background-alternative mm-box--rounded-pill"
          data-testid="network-display"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-picker-network__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
            role="img"
          >
            <img
              alt="Goerli logo"
              class="mm-avatar-network__network-image"
              src="./images/eth_logo.svg"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--color-text-default"
          >
            Goerli
          </p>
          <span
            class="mm-box mm-picker-network__arrow-down-icon mm-icon mm-icon--size-xs mm-box--margin-left-auto mm-box--display-inline-block mm-box--color-icon-default"
            style="mask-image: url('./images/icons/arrow-down.svg');"
          />
        </button>
      </div>
      <button
        class="mm-box app-header__logo-container app-header__logo-container--clickable mm-box--background-color-transparent"
        data-testid="app-header-logo"
      >
        <svg
          class="app-header__metafox-logo--horizontal"
          fill="none"
          height="24"
          viewBox="0 0 88 24"
          width="88"
          xmlns="http://www.w3.org/2000/svg"
        >
          <text
            fill="rgb(22,22,22)"
            font-family="system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
            font-size="20"
            font-weight="700"
            letter-spacing="-0.06em"
            x="0"
            y="18"
          >
            1do
          </text>
        </svg>
        <img
          alt=""
          class="app-header__metafox-logo--icon"
          src="./images/logo/1do-mark.svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`App Header unlocked state matches snapshot: unlocked 1`] = `
<div>
  <div
    class="mm-box multichain-app-header-logo mm-box--margin-2 mm-box--display-none mm-box--sm:display-flex mm-box--justify-content-center mm-box--align-items-center"
    data-testid="app-header-logo"
  >
    <button
      class="mm-box app-header__logo-container app-header__logo-container--clickable mm-box--background-color-transparent"
      data-testid="app-header-logo"
    >
      <svg
        class="app-header__metafox-logo--horizontal"
        fill="none"
        height="24"
        viewBox="0 0 88 24"
        width="88"
        xmlns="http://www.w3.org/2000/svg"
      >
        <text
          fill="rgb(22,22,22)"
          font-family="system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
          font-size="20"
          font-weight="700"
          letter-spacing="-0.06em"
          x="0"
          y="18"
        >
          1do
        </text>
      </svg>
      <img
        alt=""
        class="app-header__metafox-logo--icon"
        src="./images/logo/1do-mark.svg"
      />
    </button>
  </div>
  <div
    class="mm-box multichain-app-header mm-box--display-flex mm-box--align-items-center mm-box--width-full mm-box--background-color-background-alternative"
  >
    <div
      class="mm-box multichain-app-header__contents flex mm-box--padding-2 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--gap-2 mm-box--align-items-center mm-box--width-full mm-box--background-color-background-default"
    >
      <div
        class="mm-box min-w-0 mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box"
          style="overflow: hidden;"
        >
          <div
            class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-start mm-box--color-text-default"
          >
            <div
              class="mm-box w-full mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <button
                class="mm-box mm-text mm-button-base mm-button-base--size-sm mm-button-base--ellipsis multichain-account-picker mm-text--body-md-medium mm-text--ellipsis mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--gap-1 mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-transparent mm-box--rounded-lg"
                data-testid="account-menu-icon"
                style="height: auto;"
              >
                <span
                  class="mm-box mm-text mm-text--inherit mm-text--ellipsis mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--color-text-default"
                >
                  <div
                    class="mm-box min-w-0 mm-box--display-flex mm-box--gap-0 mm-box--flex-direction-column mm-box--align-items-center"
                  >
                    <span
                      class="mm-box mm-text multichain-account-picker__label w-full mm-text--body-md-medium mm-text--ellipsis mm-box--color-text-default"
                      style="font-weight: 500;"
                    >
                      Account 1
                    </span>
                  </div>
                </span>
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-icon-default"
                  style="mask-image: url('./images/icons/arrow-down.svg');"
                />
              </button>
            </div>
          </div>
          <div
            class="mm-box mm-box--margin-top-1 mm-box--margin-left-2"
            data-testid="networks-subtitle-test-id"
          >
            <div
              class=""
            >
              <div
                class="flex flex-row gap-1 items-center p-1 bg-muted rounded-lg h-6 cursor-pointer hover:bg-muted-hover"
                data-testid="network-group-with-copy-icon"
              >
                <div
                  class="flex flex-row items-center"
                  style="flex-shrink: 1;"
                >
                  <div
                    class="mm-box multichain-avatar-group mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                    data-testid="avatar-group"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-box--rounded-full"
                        style="margin-left: 0px;"
                      >
                        <div
                          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                        >
                          <img
                            alt="network logo"
                            class="mm-avatar-network__network-image"
                            src="./images/pol-token.svg"
                          />
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--rounded-full"
                        style="margin-left: -8px;"
                      >
                        <div
                          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                        >
                          <img
                            alt="network logo"
                            class="mm-avatar-network__network-image"
                            src="./images/bnb.svg"
                          />
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--rounded-full"
                        style="margin-left: -8px;"
                      >
                        <div
                          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                        >
                          <img
                            alt="network logo"
                            class="mm-avatar-network__network-image"
                            src="./images/eth_logo.svg"
                          />
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--rounded-full"
                        style="margin-left: -8px;"
                      >
                        <div
                          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                        >
                          <img
                            alt="network logo"
                            class="mm-avatar-network__network-image"
                            src="./images/eth_logo.svg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-medium font-default truncate flex-1"
                  data-testid="default-address-container"
                >
                  0x0DCD5...3E7bc
                </p>
                <svg
                  class="inline-block w-4 h-4 text-icon-alternative"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 18q-.825 0-1.412-.587C7 16.826 7 16.55 7 16V4q0-.824.588-1.412C8.176 1.999 8.45 2 9 2h9q.824 0 1.413.588C20.002 3.175 20 3.45 20 4v12q0 .824-.587 1.413c-.587.589-.863.587-1.413.587zm0-2h9V4H9zm-4 6q-.824 0-1.412-.587C2.999 20.826 3 20.55 3 20V6h2v14h11v2z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--justify-content-flex-end mm-box--align-items-center"
        style="margin-left: auto;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-flex-end mm-box--width-full"
            style="position: relative;"
          >
            <button
              aria-label="Account options"
              class="mm-box mm-button-icon mm-button-icon--size-lg mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="account-options-menu-button"
            >
              <span
                class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/menu.svg');"
              />
            </button>
          </div>
        </div>
        <button
          aria-label="Network menu Goerli"
          class="mm-box mm-picker-network multichain-app-header__network-picker mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--background-color-background-alternative mm-box--rounded-pill"
          data-testid="network-display"
          disabled=""
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-picker-network__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
            role="img"
          >
            <img
              alt="Goerli logo"
              class="mm-avatar-network__network-image"
              src="./images/eth_logo.svg"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--color-text-default"
          >
            Goerli
          </p>
          <span
            class="mm-box mm-picker-network__arrow-down-icon mm-icon mm-icon--size-xs mm-box--margin-left-auto mm-box--display-inline-block mm-box--color-icon-default"
            style="mask-image: url('./images/icons/arrow-down.svg');"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
